2008-02-06  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.4.

2008-02-01  Felipe Erias Morandeira <femorandeira@maemo.org>

        * src/util.cc (select_package_list_with_info): display as
	insensitive those packages that can't be installed (N79653).
        (make_select_package_list_store): fill the boolean column
	COLUMN_SP_INSTALLABLE with true or false depending whether the
	package has a candidate version for installation or not (N79653).

        * src/main.cc (restore_packages_flow): ensure connection before
        calling refresh_package_cache_without_user() (N79653).
	(set_catalogues_and_refresh): ensures that there is
	an internet connection before calling the APT worker (N78889).
        (set_catalogues_and_refresh_cont): calls apt_worker_set_catalogues
	when the ensure_network() call finishes (N78889).

2008-02-01  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.h, src/util.cc (ask_yes_no_with_details): Added a new
	parameter to add a help topic icon if needed (N80020).
	(is_interaction_flow_active): New function to check out whether or
	not a interaction flow has been finished (N79779).

	* src/operations.cc (up_confirm): Add help icon for the uninstall
	dialog pointing to the right help topic (N80020).

	* src/main.cc (window_delete_event): Ensure that not any
	interaction flow is active when closing the main window (N79779).

2008-01-30  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/operations.cc (ip_install_loop): Add package version number
	to the output string after a successfully upgrade (N79744).
	(if_install_reply): Likewise (N79744).
	(ip_download_cur): Add package version number to the output string
	shown while the upgrading process is ongoing (N79949).
	(if_install): Likewise (N79949).

2008-01-29  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/apt-worker-bin.cc (domains_last_modified): New global
	variable to keep track of when was the last modification for
	/etc/hildon-application-manager/domains file (N79708).